[package]
name = "request-stream"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.5", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "0.2.22", default-features = false, features = ["rt-threaded", "macros", "rt-util"]}
