[package]
name = "plumbing"
version = "0.9.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "An async abstraction to pipeline requests through a channel"
repository = "https://github.com/Lucretiel/lazy_format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Remember: try to keep dependency features minimal!
[dependencies]
futures = { version = "0.3.5", default-features = false, features = ["alloc"] }

[dev-dependencies]
futures = { version = "0.3.5", default-features = false, features = ["std"] }
tokio = { version = "0.2.22", default-features = false, features = ["rt-threaded", "macros", "rt-util"]}
